- Added yuidoc generator script - Split visual style into sam skin, leaving bare essentials in core - Added new graphics for sam skin - Modified demo to include print stylesheets - Made sure all docblocks were in line for dp-timeline - Fixed events overlapping due to finishing date exceeding timeline maximum length

--- a/sandbox/mosen/gallery-dp-timeline/assets/gallery-dp-timeline-core.css
+++ b/sandbox/mosen/gallery-dp-timeline/assets/gallery-dp-timeline-core.css
@@ -19,8 +19,7 @@
     position: absolute;
     z-index: 10;
     min-height: 400px;
-    width: 800px;
-    background-color: #dddddd;
+    background-color: #EEEEEE;
 }
 
 .yui3-gallery-dp-timeline .yui3-gallery-dp-timeline-day {
@@ -42,21 +41,9 @@
     text-align: center;
 }
 
-
-
-
-.yui3-skin-sam .yui3-gallery-dp-timeline .yui3-gallery-dp-timeline-event {
-    padding: 0.25em 0em 0.25em 0em;
-    
-    font-family: sans-serif;
-    font-size: 8pt;
-    font-weight: bold;
-
-    border-style: solid;
-    border-width: 1px;
-    border-color: #2ea4c5 #0074a5 #0074a5 #2ea4c5;
-    border-radius: 2px 0px 2px 0px;
-    
-    background-color: #0e84b5;
-    color: #EEEEEE;
+.yui3-gallery-dp-timeline .yui3-gallery-dp-timeline-background-highlight {
+    position: absolute;
+    background-color: #FAFAF0;
+    width: 100px;
+    min-height: 400px;
 }
